syntax = "proto3";

package user.v1;

import "user/v1/user.proto";

option go_package = "github.com/mcdev12/dynasty/go/internal/genproto/user/v1;userv1";

// UserService provides user management operations
service UserService {
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // GetUserByUsername retrieves a user by username
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
  
  // GetUserByEmail retrieves a user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  
  // UpdateUser updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // DeleteUser deletes a user by ID
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}


// CreateUserRequest represents the data needed to create a new user
message CreateUserRequest {
  string username = 1;
  string email = 2;
}

// Request/Response messages for CreateUser
message CreateUserResponse {
  User user = 1;
}

// Request/Response messages for GetUser
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

// Request/Response messages for GetUserByUsername
message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

// Request/Response messages for GetUserByEmail
message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

// UpdateUserRequest represents the data that can be updated for a user
message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
}


// Request/Response messages for UpdateUser
message UpdateUserResponse {
  User user = 1;
}

// Request/Response messages for DeleteUser
message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}